<resources>
    <string name="app_name">GIBGYM_Demo1.1</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="hello_blank_fragment2" translatable="false">Hello blank fragment two</string>
    <string name="button_home_register">Register</string>
    <string name="button_home_login">Log in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="email">Email Address</string>
    <string name="phone_number">Phone Number (Optional)</string>
    <string name="button_fLogic_submit">Submit</string>
    <string name="textView_fLogic_title">Set up the goal for your workouts!</string>
    <string name="textView_fLogic_dailyCal">Daily Calories Burn</string>
    <string name="textView_fLogic_weeklyCal">Weekly Calories Burn</string>
    <string name="uagreementI">I have read and accept </string>
    <string name="uagreementTheAgreement"><u>the user agreement</u></string>
    <string name="uagreementAnd">and</string>
    <string name="uagreementPrivacy"><u>the privacy policy</u></string>
    <string name="title_activity_initial" translatable="false">InitialActivity</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="fstInitFragTitle">Position Your Device Properly</string>
    <string name="sndInitFragTitle">Do Warm Up</string>
    <string name="trdInitFragTitle">Never Slackening</string>
    <string name="agenheight">Fill in your basic information</string>
    <string name="age">Age\u0020 \u0020 </string>
    <string name="weight">Body weight (kg)</string>
    <string name="height">Height (cm)</string>
    <string name="fstInitFragContent">Make sure to position your device properly to let the camera capture your body during the workout! </string>
    <string name="sndInitFragContent">Warm up and avoid injury! </string>
    <string name="trdInitFragContent">Great works are preformed not by strength but by perseverance!</string>
    <string name="emailtoast"> An email has been sent to your email address</string>
    <string name="forgotpass"><u>I forgot my password.</u> </string>
    <string name="confirmation_code_thingy">Please enter the confirmation code which you received via registered email</string>
    <string name="confirmation_code" translatable="false">e.g. 012345</string>
    <string name="button_resend">\u0020 <u>click here</u></string>
    <string name="notReceived">If not received in</string>
    <string name="resend_text">After</string>
    <string name="confirm">Confirm</string>
    <string name="forgotpasstext">Fill in the confirmation code received in email and reset your password</string>
    <string name="newpassword">New Password</string>
    <string name="beforefintnesstesttext">It is recommended to participate our professional 3A body test. The test will give us an overview of your strengths and weakness of your body and we will make a plan for you accordingly.The test will take approximately 15 minutes.</string>
    <string-array name="glsetarr">
        <item>Account</item>
        <item>Personal Data</item>
        <item>Motion Detection</item>
        <item>Notification</item>
        <item>Help</item>
        <item>About</item>
    </string-array>
    <string name="logout">Log out</string>
    <string name="changePass">\u0020 Change Password \u0020</string>
    <string name="rememberpass">Please remember your username carefully, it is a proof to retrieve your account back when password lost</string>
    <string name="musclebuilding">Musclebuilding</string>
    <string name="Slimming">Slimming</string>
    <string name="Fitness">Fitness</string>
    <string name="Restoration">Restoration</string>
    <string name="FrequencyPerWeek">1. Frequency per week (3+ days recommended)</string>
    <string name="DurationPerDay">2. Duration per day</string>
    <string name="Objective">3. Objective</string>
    <string name="Intensity">4. Intensity</string>
    <string name="BodayParts">5. Boday parts</string>
</resources>
