<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/background">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="218dp"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="163dp"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="268dp"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="305dp"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="357dp"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="459dp"
            app:layout_constraintGuide_percent="0.6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="522dp"
            app:layout_constraintGuide_percent="0.6" />

        <EditText
            android:id="@+id/editText_fReg_uname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="#F1EAEA"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColor="#F1EAEA"
            android:textColorHint="#A9A9A9	"
            app:layout_constraintBottom_toTopOf="@+id/guideline19"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline18" />

        <EditText
            android:id="@+id/editText_fReg_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="#F1EAEA"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#F1EAEA"
            android:textColorHint="	#A9A9A9	"
            app:layout_constraintBottom_toTopOf="@+id/guideline20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline19" />

        <EditText
            android:id="@+id/editText_fReg_Pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="#F1EAEA"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#F1EAEA"
            android:textColorHint="#A9A9A9	"
            app:layout_constraintBottom_toTopOf="@+id/guideline21"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline20" />

        <EditText
            android:id="@+id/editText_fReg_PassConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="#F1EAEA"
            android:ems="10"
            android:hint="@string/password_confirm"
            android:inputType="textPassword"
            android:textColor="#F1EAEA"
            android:textColorHint="#A9A9A9	"
            app:layout_constraintBottom_toTopOf="@+id/guideline22"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline21" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="502dp"
            app:layout_constraintGuide_percent="0.7" />

        <EditText
            android:id="@+id/editText_fReg_phonenum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="#F1EAEA"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColor="#F1EAEA"
            android:textColorHint="#A9A9A9	"
            app:layout_constraintBottom_toTopOf="@+id/guideline24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline22" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="588dp"
            app:layout_constraintGuide_percent="0.8" />

        <Button
            android:id="@+id/button_fReg_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#B6C39B"
            android:text="@string/button_fLogic_submit"
            android:textColor="#F4EFEF"
            app:layout_constraintBottom_toTopOf="@+id/guideline14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="655dp"
            app:layout_constraintGuide_percent="0.9" />

        <TextView
            android:id="@+id/textView_fReg_IveRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uagreementI"
            android:textColor="#F1EAEA"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline25"
            app:layout_constraintStart_toStartOf="@+id/guideline26"
            app:layout_constraintTop_toTopOf="@+id/guideline24"
            app:layout_constraintVertical_bias="0.305" />

        <TextView
            android:id="@+id/textView_fReg_uAgreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:clickable="false"
            android:text="@string/uagreementTheAgreement"
            android:textColor="#F1EAEA"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline25"
            app:layout_constraintStart_toEndOf="@+id/textView_fReg_IveRead"
            app:layout_constraintTop_toTopOf="@+id/guideline24"
            app:layout_constraintVertical_bias="0.305" />

        <TextView
            android:id="@+id/textView_fReg_and"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/uagreementAnd"
            android:textColor="#F1EAEA"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline25"
            app:layout_constraintStart_toEndOf="@+id/textView_fReg_uAgreement"
            app:layout_constraintTop_toTopOf="@+id/guideline24"
            app:layout_constraintVertical_bias="0.305" />

        <TextView
            android:id="@+id/textView_fReg_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/uagreementPrivacy"
            android:textColor="#F1EAEA"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline25"
            app:layout_constraintStart_toEndOf="@+id/textView_fReg_and"
            app:layout_constraintTop_toTopOf="@+id/guideline24"
            app:layout_constraintVertical_bias="0.305" />

        <CheckBox
            android:id="@+id/checkBox_fReg"
            android:layout_width="29dp"
            android:layout_height="18dp"
            android:buttonTint="#F1EAEA"
            android:textColor="#F1EAEA"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline25"
            app:layout_constraintEnd_toStartOf="@+id/guideline27"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView_fReg_privacy"
            app:layout_constraintTop_toTopOf="@+id/guideline24"
            app:layout_constraintVertical_bias="0.315" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="62dp"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="333dp"
            app:layout_constraintGuide_percent="0.7" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>