<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/background">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline66"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline67"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline68"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline69"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline70"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.65" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline71"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.75" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline72"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/textView_forgotFrag_TextTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotpasstext"
            android:textAlignment="center"
            android:textColor="#F4EFEF"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline67"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline66" />

        <EditText
            android:id="@+id/editTextTextPassword_forgotFrag_newPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="#F1EAEA"
            android:ems="10"
            android:hint="@string/newpassword"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="#F4EFEF"
            android:textColorHint="#A9A9A9	"
            app:layout_constraintBottom_toTopOf="@+id/guideline69"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline68" />

        <EditText
            android:id="@+id/editTextTextPassword_forgotFrag_newPassConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="#F1EAEA"
            android:ems="10"
            android:hint="@string/password_confirm"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="#F4EFEF"
            android:textColorHint="#A9A9A9	"
            app:layout_constraintBottom_toTopOf="@+id/guideline70"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline69" />

        <Button
            android:id="@+id/button_forgotFrag_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#B6C39B"
            android:text="@string/confirm"
            android:textColor="#F4EFEF"
            app:layout_constraintBottom_toTopOf="@+id/guideline71"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline70" />

        <EditText
            android:id="@+id/editTextNumber_forgotFrag_confCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="#F1EAEA"
            android:ems="10"
            android:hint="@string/confirmation_code"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="#F4EFEF"
            android:textColorHint="#A9A9A9	"
            app:layout_constraintBottom_toTopOf="@+id/guideline68"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline67" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>