<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BusinessLogic.AgeWeightFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/anw_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/background">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="389dp"
            app:layout_constraintGuide_percent="0.6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="218dp"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="291dp"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="184dp"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline43"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="314dp"
            app:layout_constraintGuide_percent="0.4" />

        <TextView
            android:id="@+id/textView_anwfrag_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/agenheight"
            android:textColor="#F4EFEF"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline41"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline40" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline44"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="389dp"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline46"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="559dp"
            app:layout_constraintGuide_percent="0.7" />

        <EditText
            android:id="@+id/editTextNumber_anwfrag_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/height"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="#F4EFEF"
            app:layout_constraintBottom_toTopOf="@+id/guideline44"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline43" />

        <EditText
            android:id="@+id/editTextNumber_anwfrag_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/age"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="#F4EFEF"
            app:layout_constraintBottom_toTopOf="@+id/guideline43"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline41" />

        <EditText
            android:id="@+id/editTextNumber_anwfrag_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/weight"
            android:inputType="number"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/guideline45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline44" />

        <Button
            android:id="@+id/button_anwfrag_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#B6C39B"
            android:text="@string/next"
            android:textColor="#ECE8E8"
            app:layout_constraintBottom_toTopOf="@+id/guideline46"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline45" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>